<resources>
    <string name="app_name">FitHub</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_pass">Repeat Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="sign_out">Sign out</string>
    <string name="welcome">Welcome to FitHub!</string>
    <string name="back">Back</string>
    <string name="load">Load</string>
    <string name="hello">Hello,</string>
    <string name="try_again">Try again</string>
    <string name="close">Close</string>
    <string name="crash">Crash</string>
    <string name="age">Age</string>
    <string name="age_title">Age:</string>
    <string name="weight">Weight, in Kg</string>
    <string name="weight_title">Weight:</string>
    <string name="height">Height, in cm</string>
    <string name="height_title">Height:</string>
    <string name="neck">Neck, in cm</string>
    <string name="waist">Waist, in cm</string>
    <string name="hip">Hip, in cm</string>
    <string name="request_error">There was an error while requesting the desired data</string>
    <string name="empty_parameter">can\'t be empty</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="calculate">Calculate</string>
    <string name="bmi_option">BMI</string>
    <string name="bmi_value_title">BMI Value:</string>
    <string name="bmi_title">Body Mass Index</string>
    <string name="body_fat_option">BF %</string>
    <string name="body_fat_title">Body Fat Percentage</string>
    <string name="history_option">History</string>
    <string name="category">Category</string>
    <string name="category_title">Category:</string>
    <string name="no_match_pw">Passwords don\'t match</string>
    <string name="short_pw">Password must have, at least, 6 characters</string>
    <string name="no_user_register">It wasn\'t possible to register the user</string>
    <string name="no_login_user">It wasn\'t possible to validate user\'s identity</string>
    <string name="send_pic">New Photo</string>
    <string name="recv_pic">Receive Album</string>
    <string name="calories">Daily Calories</string>
    <string name="level_1">Sedentary: little or no exercise</string>
    <string name="level_2">Exercise 1–3 times/week</string>
    <string name="level_3">Exercise 4–5 times/week</string>
    <string name="level_4">Daily exercise or intense exercise 3–4 times/week</string>
    <string name="level_5">Intense exercise 6–7 times/week</string>
    <string name="level_6">Very intense exercise daily, or physical job</string>
    <string name="suggestion_title">How about doing some:</string>
    <string name="suggestion_button">Suggested Activity</string>
    <string name="for_example">For example:</string>
    <string name="send">Send</string>
    <string name="open_cam">Open Cam</string>
    <string name="light">Light Activity</string>
    <string name="progress_album">Progress Album</string>
    <string name="moderate">Moderate Activity</string>
    <string name="vigorous">Vigorous Activity</string>

    <string name="extreme_loss">Extreme Weight Loss (1Kg/Week)</string>
    <string name="loss">Weight Loss (0.5Kg/Week)</string>
    <string name="mild_loss">Mild Weight Loss (0.25Kg/Week)</string>
    <string name="maintain">Maintain Weight</string>
    <string name="mild_gain">Mild Weight Gain (0.25Kg/Week)</string>
    <string name="gain">Weight Gain (0.5Kg/Week)</string>
    <string name="extreme_gain">Extreme Weight Gain (1Kg/Week)</string>

    <string name="mainMenuCalories">Dont Forget Your Daily Intake:</string>
    <string name="dailyCaloriesResult">Daily Calories Needed:</string>
    <string name="title_activity_about_compose_acitivity">AboutComposeAcitivity</string>
    <string name= "about_btn">About App</string>
    <string name="About_1">FitHub is the perfect companion for your fitness journey.</string>
    <string name="About_2">Want to keep track your BMI or BF%? FitHub!</string>
    <string name="About_3">Want to take progress pictures of your journey? FitHub!</string>
    <string name="About_4">Need to know what your daily calorie requirements are? FitHub!</string>
    <string name="About_5">Bored and want to do a different activity? FitHub!</string>
    <string name="About_6">With FitHub being healthier is easier and funnier.</string>
    <string name="About_7">Choose FitHub, choose health.</string>
    <string name="made_by">Made By:</string>

</resources>